Add display image and research interests

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 							<!-- Banner -->
 								<section id="banner">
 									<div class="row">
-										<div class="content col-8 col-12-small">
+										<div class="content col-6 col-12-small">
 											<header>
 												<h1>Dilawer Ahmed</h1>
-												<p>PhD candidate</p>
+												<p>PhD student</p>
 												<p>Computer Science Department</br>
 												North Carolina State University</p>
 											</header>
@@ -55,12 +55,32 @@
 												<li><a href="#" class="button big">Learn More</a></li>
 											</ul> -->
 										</div>
-			
-										<span class="col-4 col-12-small">
-											<img class="img-fluid" style="max-width: 80%; max-height: 80%;", src="images/wsprlogo.png" alt="WSPR Logo"/>
+										<span class="col-2"></span>
+										<span class="col-3 col-12-small">
+											<img class="img-fluid" style="max-width: 90%; max-height: 90%;", src="images/display.jpg" alt="WSPR Logo"/>
 										</span>
+										<span class="col-1"></span>
 									</div>
 								</section>
+
+								<!-- Section -->
+								<section>
+									<header class="major">
+										<h2>Research Interests</h2>
+									</header>
+									<!-- Publication -->
+									<div class="row">
+										<div class="col-6 col-12-small">
+											<h3>IoT Security and Privacy</h3>
+											<p style="text-align: justify;">The focus of my research is to make IoT as a platform more secure. IoT is not the future any more it is as much present as anything and security and privacy aspect of it has been understated. The impact billions of insecure and vulnerable devices can have is huge. Through my research I want to make the platform more secure and privacy preserving.</p>
+										</div>
+										<div class="col-6 col-12-small">
+											<h3>Web Security</h3>
+											<p style="text-align: justify;">Web is the primary component which connects millions of people worldwide and enables interactions through various other platforms. To ensure security and privacy in web and its applications are of paramount importance and a passion of mine. My research work focuses on preventing bad actors from doing bad things and giving control back to the users</p>
+										</div>
+
+									</div>
+								</section>	
 
 							<!-- Section -->
 								<section>
